SFDCProject/src/objects/Custom_Email_Object_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seq_No__c</fullName>
        <label>Seq No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Where_Field_Data_Type__c</fullName>
        <label>Where Field Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_Field_Name__c</fullName>
        <label>Where Field Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Where_Field_Value__c</fullName>
        <label>Where Field Value</label>
        <type>TextArea</type>
    </fields>
    <label>Custom Email Object Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Type__c</columns>
        <columns>Seq_No__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Where_Field_Name__c</columns>
        <columns>Where_Field_Value__c</columns>
        <columns>Where_Field_Data_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Custom Email Object Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Email Object Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>